Fix buttons overflowing on smaller screens
- Fixed the calculator's body to a minimum width so buttons don't
overflow out when display gets smaller

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
 
 .calculator-container {
     width: 550px;
+    min-width: 550px;
     height: 850px;
     padding: 45px 40px;
     border-radius: 25px;
